[Curl] Fix clang build error in CurlContext.cpp https://bugs.webkit.org/show_bug.cgi?id=184561

Patch by Christopher Reid <chris.reid@sony.com> on 2018-04-12
Reviewed by Darin Adler.

MSVC allows explicit template specialization in classes but gcc/clang do not.

* platform/network/curl/CurlContext.cpp:

Canonical link: https://commits.webkit.org/200120@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230620 268f45cc-cd09-0410-ab3c-d52691b4dbfc